# ukb-hs

./: ChangeLog.md  POS.hs  Test.hs  UKB.hs  default.nix  pos-tag.py  ukb-parsability.patch  ukb.cabal  ukb.nix
src/: POS.hs  UKB.hs
