name:                ukb
version:             0.1.0.0
-- synopsis:
-- description:
license:             BSD3
license-file:        LICENSE
author:              Ben Gamari
maintainer:          ben@smart-cactus.org
copyright:           (c) 2018 Ben Gamari
-- category:
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  exposed-modules:     POS, UKB
  other-extensions:    CPP, OverloadedStrings, GeneralizedNewtypeDeriving
  hs-source-dirs:      src
  build-depends:       base >=4.10 && <4.11,
                       text >=1.2 && <1.3,
                       bytestring >=0.10 && <0.11,
                       aeson >=1.2 && <1.3,
                       process >=1.6 && <1.7
  default-language:    Haskell2010

executable test
  main-is:             Test.hs
  build-depends:       base >=4.10 && <4.11,
                       text >=1.2 && <1.3,
                       ukb
  default-language:    Haskell2010